<resources>
    <string name="app_name">Tryksave</string>
    <string name="get_started">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Ronald Timbol</string>
    <string name="manage">Manage your profile</string>
    <string name="setting">Settings</string>
    <string name="support">Support</string>
    <string name="hist">Transaction</string>
    <string name="loc">From:</string>
    <string name="dest">To:</string>
    <string name="paymentBarLabel">PAYMENT INFORMATION</string>
    <string name="price_label">Estimated Price:</string>
    <string name="amount">Amount here</string>
    <string name="book_button">BOOK NOW</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="open_nav">Open Navigation Bar</string>
    <string name="close_nav">Close Navigation Bar</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="ronaldtimbol_gmail_com">ronaldtimbol@gmail.com</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="fab_description">Search Destination</string>
    <string name="dashboard">Dashboard</string>
    <string name="records">Records</string>
</resources>