<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/setting"/>

        <item
            android:id="@+id/notifs"
            android:icon="@drawable/notifications_icon"
            android:title="@string/notifications"/>

        <item
            android:id="@+id/about"
            android:icon="@drawable/about_icon"
            android:title="@string/about_us"/>

    </group>

    <item
        android:title="">
        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout"/>

        </menu>
    </item>
</menu>