<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:layout_marginTop="680dp"
        android:background="@color/green"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="10dp"
                android:text="@string/paymentBarLabel"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/price_label"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/booking_fare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/amount"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:background="@color/green" >

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/end_autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/set_bars"
                android:drawableStart="@drawable/currenr_loc_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/loc"
                android:inputType="text"
                android:padding="7dp" />

            <EditText
                android:id="@+id/start_autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/set_bars"
                android:drawableStart="@drawable/destination_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/dest"
                android:inputType="text"
                android:padding="7dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/estimation_button"
        android:layout_width="363dp"
        android:layout_height="52dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/importantbuttonwhite"
        android:fontFamily="@font/clashgroteskregular"
        android:text="Compute"
        android:textColor="#43A047"
        android:textSize="21sp"
        app:backgroundTint="@null" />

    <TextView
        android:id="@+id/estimation_text_view"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:paddingTop="16dp"
        android:text=""
        />

</FrameLayout>
